corrected the image path

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <table cellspacing = "20">
       <tr>
-        <td><img src="images/anish-modified.png" alt="anish profile photo"></td>
+        <td><img src="anish-modified.png" alt="anish profile photo"></td>
         <td>
           <h1> Anish Kumar </h1>
           <p>
